<resources>
    <string name="app_name">Pantry</string>

    <string name="login">Login/Register</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_fridge">HomeFridgeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_checked_items">CheckedItems</string>
    <string name="title_activity_add_puck">Add Puck</string>
    <string name="title_activity_switch_puck">Switch Puck</string>
    <string name="title_activity_remove_puck">Remove Puck</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="username_label">Username </string>
    <string name="username_hint">Enter username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="login_button">Login</string>
    <string name="password_confirm_label">Confirm password</string>
    <string name="password_confirm_hint">Enter password</string>
    <string name="create_account_button">Create account</string>
</resources>
