<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hobosigns.MainActivity" >


    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/create_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_label"
        android:inputType="text"
        android:hint="@string/username_hint" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_username_field"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/create_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_password_field"
        android:text="@string/password_confirm_label" />

    <EditText
        android:id="@+id/create_confirm_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password_label"
        android:inputType="textPassword"
        android:hint="@string/password_confirm_hint"
        />

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_confirm_field"
        android:layout_alignStart="@+id/create_confirm_field"
        android:layout_alignRight="@+id/create_confirm_field"
        android:layout_alignEnd="@+id/create_confirm_field"
        android:layout_below="@id/create_confirm_field"
        android:text="@string/create_account_button" />

</RelativeLayout>
